Profile Complete Challenge/src/objects/Member__c.object
<CustomObject>
    <description>The members for the application.</description>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paperwork_Received__c</fullName>
        <label>Paperwork Received</label>
        <picklist>
            <picklistValues>
                <fullName>New User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Work Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paperwork_Sent__c</fullName>
        <label>Paperwork Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paperwork_Year__c</fullName>
        <label>Paperwork Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paypal_Payment_Address__c</fullName>
        <description>This is the Paypal address that money should be sent to.</description>
        <inlineHelpText>This is the Paypal address that money should be sent to.</inlineHelpText>
        <label>Paypal Payment Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_Mobile__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Payment__c</fullName>
        <label>Preferred Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paypal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Complete__c</fullName>
        <defaultValue>10.00</defaultValue>
        <description>How complete is this profile</description>
        <inlineHelpText>How complete is this profile</inlineHelpText>
        <label>Profile Complete</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profile_Pic__c</fullName>
        <defaultValue>&quot;http://cloudspokes.s3.amazonaws.com/Cloud_th_100.jpg&quot;</defaultValue>
        <description>The URL to their profile picture.</description>
        <label>Profile Pic</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School /  University</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Bio__c</fullName>
        <label>Summary / Bio</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Time (US &amp; Canada) -- (GMT-05:00)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Username set as external id sent via integration with SQL.</inlineHelpText>
        <label>Username (ext)</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website / Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Status__c</fullName>
        <label>Work Status</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer Not To Answer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>ZIP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>